# axum-authentik-auth

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  with_group_guard.rs
src/: error.rs  extractor.rs  guard.rs  layer.rs  lib.rs  user.rs
tests/: integration_test.rs
