[package]
name        = "axum-authentik-auth"
version     = "0.1.1"
edition     = "2024"
description = "Axum extractor and middleware for authentik Proxy Provider forward auth"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/loongsoldier/axum-authentik-auth"
documentation = "https://docs.rs/axum-authentik-auth"
keywords    = ["axum", "authentik", "authentication", "middleware", "forward-auth"]
categories  = ["web-programming::http-server", "authentication"]

[dependencies]
axum        = { version = "0.8", default-features = false }
axum-core   = "0.5"
http        = "1"
serde       = { version = "1", features = ["derive"] }
thiserror   = "2"
apiresponse = { version = "0.2.1", features = ["axum"] }

# Optional: tower Layer for custom authentik header prefix injection
tower        = { version = "0.5", optional = true }
tower-layer  = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
layer   = ["dep:tower", "dep:tower-layer", "dep:futures-util"]

[dev-dependencies]
tokio      = { version = "1", features = ["full"] }
axum       = { version = "0.8", features = ["tokio", "json"] }
tower      = { version = "0.5", features = ["util"] }
serde_json = "1"
